tests/NormalTests/paczka1/small_fuzzy/73884684.err
Error in line 10: 3as7ctFI S839 871,5
Error in line 16: 3as7ctFI A922 -3,8
